# axiomio

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  opencode.rs
cli/tests/: configure.rs
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: attestation.rs  config.rs  e2ee.rs  error.rs  events.rs  lib.rs  openai.rs  provider.rs  relay.rs
crates/axiom-core/src/providers/: mod.rs  near.rs
crates/axiom-server/: Cargo.toml
crates/axiom-server/src/: audit.rs  command.rs  handlers.rs  headless.rs  history.rs  lib.rs  sse.rs  state.rs
crates/axiom-server/tests/: relay_flow.rs
fixtures/e2ee_vectors/: near-v2.json
fixtures/opencode/: tool-loop-v1.17.18.json
install/: README.md  axiomup.ps1  axiomup.sh  install.ps1  install.sh
install/tests/: install_powershell.sh  install_unix.sh  release_contract.sh
scripts/: smoke_opencode_tools.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  keyring.rs  lib.rs  main.rs  server_handle.rs  tray.rs  update.rs
src-tauri/tests/: configure_command.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/lib/: tauri.ts
