[workspace]
resolver = "2"
members = ["crates/axiom-core", "crates/axiom-server", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["Astrea"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
hkdf = "0.12"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 16
