[package]
name = "axiomio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AxiomIO — OpenAI-compatible local adapter with TEE-attested E2EE"

[[bin]]
name = "axiomio"
path = "src/main.rs"

[lib]
name = "axiom_proxy_lib"
# Desktop builds only need the rlib consumed by src-tauri/src/main.rs.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axiom-core = { path = "../crates/axiom-core" }
axiom-server = { path = "../crates/axiom-server" }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# Tauri's default; kept explicit for clarity.
custom-protocol = ["tauri/custom-protocol"]
