[package]
name = "axiom-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
sha2.workspace = true
hkdf.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
ed25519-dalek = { version = "2.2", features = ["hazmat"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4.1"
chacha20poly1305 = "0.10"
rand_core = "0.6"
x509-parser = "0.17"
eventsource-stream = "0.2"
futures-util = "0.3"
directories = "6"
jsonwebtoken = { version = "9", default-features = false }
base64 = "0.22"
dcap-qvl = "0.5"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
