[package]
name = "axiom-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axiom-core = { path = "../axiom-core" }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
anyhow.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
clap = { version = "4.5", features = ["derive"] }
jsonc-parser = { version = "0.26", features = ["cst"] }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
axiom-core = { path = "../axiom-core" }
async-trait = "0.1"
hex = "0.4"
serde_json = "1"
